fixed colors and overflow

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,17 @@
+body, html {
+  height: 100%;
+  overflow-y: hidden;
+}
+
+#rowloggernav {
+  background-color: white!important;
+  box-shadow: 0 10px 4px -4px #eee;
+}
+
+.bg-light {
+  background-color: white;
+}
+
 .rowForm {
   height: 100%;
   width: 300px;
@@ -6,10 +20,13 @@
   left: 0;
   overflow-x: hidden;
   padding: 20px;
+  box-shadow: 7px 0 4px -4px #eee;
 }
 
 .rowLog {
-  margin-left: 400px;
+  margin-left: 300px;
+  height: 100vh;
+  background-color: #f6f6f6;
 }
 
 .rowDateGroup {
